tests/snapshots/conformance__y_string_in_array_with_leading_space.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
[ "asd"]
stdout --- 
["asd"]
stderr --- 
<empty>
