tests/snapshots/conformance__y_string_last_surrogates_1_and_2.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\uDBFF\uDFFF"]
stdout --- 
["\uDBFF\uDFFF"]
stderr --- 
<empty>
