tests/snapshots/conformance__y_string_nbsp_uescaped.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["new\u00A0line"]
stdout --- 
["new\u00A0line"]
stderr --- 
<empty>
