tests/snapshots/conformance__y_string_noncharacterinutf-8_u+ffff.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["￿"]
stdout --- 
["￿"]
stderr --- 
<empty>
