tests/snapshots/conformance__y_string_one-byte-utf-8.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(case.text, &annotated)"
---
case --- 
["\u002c"]
stdout --- 
["\u002c"]
stderr --- 
<empty>
