tests/snapshots/conformance__y_string_pi.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["π"]
stdout --- 
["π"]
stderr --- 
<empty>
