tests/snapshots/conformance__y_string_reservedcharacterinutf-8_u+1bfff.json.snap
---
source: tests/conformance.rs
expression: "format_output_snapshot(&case.text, &annotated)"
---
case --- 
["𛿿"]
stdout --- 
["𛿿"]
stderr --- 
<empty>
